# fleet-config

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  bootstrap-swarm.sh  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/ISSUE_TEMPLATE/: epic.md  task.md
.github/workflows/: ci.yml
alembic/: env.py  script.py.mako
alembic/versions/: 0001_initial.py  0002_config_keys.py  0003_feature_flags.py
demos/: README.md  multi_agent_demo.py
docs/: ADR-001-storage-backend.md  ADR-002-api-design.md  ADR-003-deployment-model.md  API.md  ARCHITECTURE.md  BACKLOG.md  PRD.md  ROADMAP.md  SDK.md  STORIES.md  SWARM_ARCHITECTURE.md  UX.md
docs/ADR/: 0001-storage-abstraction.md  0002-auth-model.md  0003-flag-rollout-hashing.md
integration_tests/: conftest.py  test_configs.py  test_contract.py  test_flags.py  test_sdk.py  test_watch_sse.py
sdk/: README.md  pyproject.toml
sdk/src/fleet_config/: __init__.py  client.py  errors.py  models.py  watch.py
sdk/tests/: test_client.py  test_sdk_watch.py
src/: database.py  main.py  watchers.py
src/models/: __init__.py  config_key.py  feature_flag.py
src/routers/: configs.py  flags.py
tests/: conftest.py  test_configs.py  test_db.py  test_flags.py  test_health.py  test_watch.py
