[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fleet-config"
version = "0.1.0"
description = "Fleet config service scaffold"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<1.0",
  "sqlalchemy>=2.0,<3.0",
  "uvicorn[standard]>=0.30,<1.0",
  "alembic>=1.13,<2.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27,<1.0",
  "mypy>=1.10,<2.0",
  "pre-commit>=3.7,<4.0",
  "pytest>=8.2,<9.0",
  "ruff>=0.5,<1.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
check_untyped_defs = true
plugins = []

[[tool.mypy.overrides]]
module = ["alembic.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
markers = ["integration: requires running service"]
